kibana/istio-gpt.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kibana-gateway
  namespace: logging
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      mode: PASSTHROUGH
      #credentialName: kibana-cert # Replace with the name of your certificate
    hosts:
    - safir-kibana.b3lab.org # Replace with the hostname you want to use

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-virtual-service
  namespace: logging
spec:
  hosts:
  - safir-kibana.b3lab.org # Replace with the hostname you want to use
  gateways:
  - kibana-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kibana.logging.svc.cluster.local
        port:
          number: 5601
